bigbluebutton-html5/public/stylesheets/re-style/re-style-base.css
.text-base {
    font-size: 14px;
    line-height: 1.5;
    color: var(--Text-Primary, #313131);
}

/* WIDTH, HEIGHT */
.w-100 {
    width: 100% !important;
}

.h-100 {
    height: 100% !important;
}

.w-50 {
    width: 50% !important;
}

.h-50 {
    height: 50% !important;
}

.w-75 {
    width: 75% !important;
}

.h-75 {
    height: 75% !important;
}

.w-25 {
    width: 25% !important;
}

.h-25 {
    height: 25% !important;
}

/* FLEX */
.d-flex {
    display: flex;
}

.d-inline-flex {
    display: inline-flex;
}

.flex-column {
    flex-direction: column;
}

.align-items-center {
    align-items: center;
}

.align-items-start {
    align-items: flex-start;
}

.align-items-end {
    align-items: flex-end;
}

.align-items-baseline {
    align-items: baseline;
}


.justify-content-center {
    justify-content: center;
}

.justify-content-start {
    justify-content: flex-start;
}

.justify-content-end {
    justify-content: flex-end;
}

.justify-content-between {
    justify-content: space-between;
}

.gap-4 {
    gap: 4px;
}

.gap-6 {
    gap: 6px;
}

.gap-8 {
    gap: 8px;
}

.gap-10 {
    gap: 10px;
}

.gap-16 {
    gap: 16px;
}

.gap-20 {
    gap: 20px;
}

/* TEXT ALIGN */
.text-center {
    text-align: center;
}

/* TEXT COLOR */

.text-primary {
    color: var(--text-primary-light, #313131) !important;
}

.text-primary-dark {
    [data-darkreader-scheme="dark"] & {
        color: var(--text-primary-dark, #FCFCFD) !important;
    }
}

.text-secondary {
    color: var(--text-secondary-light, #6B6B6B) !important;
}

.text-secondary-dark {
    [data-darkreader-scheme="dark"] & {
        color: var(--text-secondary-dark, #C5C9CD) !important;
    }
}



/* PADDING */
.p-0 {
    padding: 0;
}

.p-16 {
    padding: 16px;
}

.pt-16 {
    padding-top: 16px;
}

.pb-16 {
    padding-bottom: 16px;
}

.p-20 {
    padding: 20px;
}

.pt-20 {
    padding-top: 20px;
}

.pb-20 {
    padding-bottom: 20px;
}

.pl-24 {
    padding-left: 24px;
}

/* MARGIN */
.m-0 {
    margin: 0;
}

.m-0-i {
    margin: 0 !important;
}

.ml-0-i {
    margin-left: 0 !important;
}

.mr-0-i {
    margin-right: 0 !important;
}

.mt-0-i {
    margin-top: 0 !important;
}

.mb-0 {
    margin-bottom: 0;
}

.mb-0-i {
    margin-bottom: 0 !important;
}

.mt-0 {
    margin-top: 0;
}

.mt-4 {
    margin-top: 4px;
}

.mt-6 {
    margin-top: 6px;
}

.m-8-i {
    margin: 8px !important;
}

.mb-8-i {
    margin-bottom: 8px !important;
}

.mt-12 {
    margin-top: 12px;
}

.mt-16 {
    margin-top: 16px;
}

.mt-20 {
    margin-top: 20px;
}

.mt-22 {
    margin-top: 20px;
}

.mt-28 {
    margin-top: 28px;
}

.mt-32 {
    margin-top: 32px;
}

.mb-32 {
    margin-bottom: 32px;
}


.mt-20-i {
    margin-top: 20px!important;
}


.ml-24-i {
    margin-left: 24px !important;
}


.mt-36-i {
    margin-top: 36px!important;
}


/* BORDER */
.border-separator {
    border-top: 1px solid var(--border-00-light, #EFEFEF);
}

/*INPUT*/

textarea::placeholder,
input::placeholder {
    color: var(--Text-Secondary, #6F767E);
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 20px;
}

